Noon and Cargo Axios working

--- a/noon/src/styles.css
+++ b/noon/src/styles.css
@@ -118,3 +118,13 @@
 .wrapper fieldset {
     margin: 20px 0;
 }
+
+.footer{
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgb(35, 34, 34);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
